--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "bcrypt": "^5.1.1",
     "bluebird": "^3.7.2",
     "body-parser": "1.19.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "3.1.10",
     "express": "4.17.2",
+    "helmet": "^8.0.0",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "nodemon": "2.0.15",
     "npm": "^10.8.3",
