complete room api

--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "helmet": "^8.0.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
     "mysql2": "^3.11.3",
     "nodemon": "2.0.15",
     "npm": "^10.8.3",
     "sequelize": "^6.37.4",
     "sequelize-cli": "^6.6.2",
     "update-dotenv": "^1.1.1"
+  },
+  "_moduleAliases": {
+    "@": "./src"
   }
 }
