--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
     "nodemon": "2.0.15",
     "npm": "^10.8.3",
+    "path": "^0.12.7",
     "sequelize": "^6.37.4",
     "sequelize-cli": "^6.6.2",
     "update-dotenv": "^1.1.1"
